--- a/NetBeansProjects/JavaApplication3/src/jFramePrincipal.form
+++ b/NetBeansProjects/JavaApplication3/src/jFramePrincipal.form
@@ -161,6 +161,9 @@
         <Component class="javax.swing.JButton" name="jButtonCad">
           <Properties>
             <Property name="text" type="java.lang.String" value="CADASTRAR"/>
+            <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+              <Color id="Hand Cursor"/>
+            </Property>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonCadActionPerformed"/>
@@ -169,6 +172,9 @@
         <Component class="javax.swing.JButton" name="jButtonSob">
           <Properties>
             <Property name="text" type="java.lang.String" value="SOBRE"/>
+            <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+              <Color id="Hand Cursor"/>
+            </Property>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonSobActionPerformed"/>
@@ -177,6 +183,9 @@
         <Component class="javax.swing.JButton" name="jButtonSair">
           <Properties>
             <Property name="text" type="java.lang.String" value="SAIR"/>
+            <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+              <Color id="Hand Cursor"/>
+            </Property>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonSairActionPerformed"/>
